Add delete to swagger
